<resources>
    <string name="app_name">Tankv3</string>
    <string name="avg_consum">Average Consumption</string>
    <string name="max_gas">Maximum Gas Consumption:</string>
    <string name="min_gas">Minimum Gas Consumption:</string>
    <string name="unit_select">Please select a unit:</string>
    <string name="lkm_unit">l/100km</string>
    <string name="mpg_unit">mpg</string>

    <string name="odo_value_txt">Odometer Value (in km)</string>
    <string name="fuel_amt_txt">Amount of Fuel (in L)</string>
    <string name="enter_amt">Enter</string>
    <string name="enter">Enter Values</string>
    <string name="seeValues">See Values</string>
</resources>
