<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/odo_value_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/odo_value_txt"
        android:layout_marginTop="20dp"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/odo_value"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:inputType="number"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/fuel_amt_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fuel_amt_txt"
        android:layout_marginTop="20dp"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/fuel_amt"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:inputType="number"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/enter_amt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/enter_amt"/>

    <Button
        android:id="@+id/see_values"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/seeValues" />

</LinearLayout>