<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fi.metropolia.marias.tankv3.MainActivity">

    <TextView
        android:id="@+id/avg_comsum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avg_consum"
        android:textSize="26sp"/>

    <TextView
        android:id="@+id/avgConsumRate"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:textSize="30sp"
        android:layout_below="@+id/avg_comsum"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/mpg_unit"
        android:layout_alignRight="@+id/min"
        android:layout_alignEnd="@+id/min" />


    <TextView
        android:id="@+id/unit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="17sp"
        android:paddingTop="20dp"
        android:layout_alignBottom="@+id/avgConsumRate"
        android:layout_toEndOf="@+id/min"
        android:layout_toRightOf="@+id/min" />

    <TextView
        android:id="@+id/unit_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unit_select"
        android:textSize="20sp"
        android:layout_below="@+id/avgConsumRate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="39dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup">
    </RadioGroup>

    <RadioButton
        android:id="@+id/lkm_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lkm_unit"
        android:textSize="20sp"
        android:layout_below="@+id/unit_select"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioButton
        android:id="@+id/mpg_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mpg_unit"
        android:textSize="20sp"
        android:layout_below="@+id/unit_select"
        android:layout_alignRight="@+id/min"
        android:layout_alignEnd="@+id/min" />

    <TextView
        android:id="@+id/max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_gas"
        android:textSize="20sp"
        android:layout_below="@+id/mpg_unit"
        android:layout_marginTop="38dp" />

    <TextView
        android:id="@+id/max_gas"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:textSize="50sp"
        android:layout_below="@+id/max"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/avgConsumRate"
        android:layout_alignEnd="@+id/avgConsumRate" />

    <TextView
        android:id="@+id/min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min_gas"
        android:textSize="20sp"
        android:layout_below="@+id/max_gas"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/min_gas"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:textSize="50sp"
        android:layout_below="@+id/min"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/max_gas"
        android:layout_alignEnd="@+id/max_gas" />

    <Button
        android:id="@+id/btn"
        android:text="@string/enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
